--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -30,10 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height = 125\n",
+    "daily_distance = 30\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0 "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while snail_position < well_height:\n",
+    "    snail_position += daily_distance\n",
+    "    snail_position += nightly_distance\n",
+    "    days += 1 \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "escaped in 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"escaped in\", days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +119,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " position of the snail on day 1 is 10cm. \n",
+      "\n",
+      " position of the snail on day 2 is 11cm. \n",
+      "\n",
+      " position of the snail on day 3 is 24cm. \n",
+      "\n",
+      " position of the snail on day 4 is 81cm. \n",
+      "\n",
+      " position of the snail on day 5 is 105cm. \n",
+      "\n",
+      " position of the snail on day 6 is 130cm. \n",
+      "\n",
+      "it took 6 days for the snail to climb the well. \n",
+      ".\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height = 125 \n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "nightly_distance = 20\n",
+    "days_count = 0\n",
+    "snail_position = 0 \n",
+    "net_advance =[]\n",
+    "total = 0\n",
+    "\n",
+    "while snail_position < well_height:\n",
+    "    snail_position += (advance_cm[days_count] - nightly_distance)\n",
+    "    days_count += 1\n",
+    "    print(' position of the snail on day ' + str(days_count) + ' is ' + str(snail_position) + 'cm. \\n')\n",
+    "print('it took ' + str(days_count) + ' days for the snail to climb the well. \\n.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 1, 13, 57, 24, 25, 3, 25, -8, 14, 35]\n",
+      "The max displacement in one day is 57cm.\n",
+      "The max displacement in one day is -8cm.\n"
+     ]
+    }
+   ],
+   "source": [
+    "net_advance = [day_distance - nightly_distance for day_distance in advance_cm]\n",
+    "print(net_advance)\n",
+    "print('The max displacement in one day is ' + str(max(net_advance)) + 'cm.')\n",
+    "print('The max displacement in one day is ' + str(min(net_advance)) + 'cm.')\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,16 +199,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the average progress is 293.72727272727275cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_progress = sum(net_advance)/len(net_advance)\n",
+    "print('the average progress is ' + str(average_progress) + 'cm')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. What is the standard deviation of its displacement? Take into account the snail slides at night."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[65, 292, 25, 1513, 34, 47, 227, 47, 680, 16, 285]\n",
+      "the variance is  293.72727272727275\n",
+      "the standard deviation is  17.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "net_advance = [10, 1, 13, 57, 24, 25, 3, 25, -8, 14, 35]\n",
+    "net_advance = [int((advance - avergae_progress)**2) for advance in net_advance]\n",
+    "print(net_advance)\n",
+    "variance = sum(net_advance)/len(net_advance)\n",
+    "print('the variance is ' , variance)\n",
+    "standard_deviation = round(variance**(1/2), 1)\n",
+    "print('the standard deviation is ', + standard_deviation)"
    ]
   },
   {
@@ -161,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
