--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -49,10 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells = 10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins 6\n",
+      "saruman wins 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells = 10\n",
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
+    "for i in range(spells):\n",
+    "    if gandalf[i] > saruman [i]:\n",
+    "        gandalf_wins += 1\n",
+    "    if gandalf[i] < saruman[i]:\n",
+    "        saruman_wins += 1 \n",
+    "print('Gandalf wins', + gandalf_wins)\n",
+    "print('saruman wins', + saruman_wins)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gandalf_wins)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "POWER = {'Fireball': 50, 'Lightning bolt': 40, 'Magic arrow': 10, 'Black Tentacles': 25, \n",
+    "'Contagion': 45}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "spells = len(gandalf)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +208,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "POWER = {'Fireball': 50,\n",
+    "         'Lightning bolt': 40, \n",
+    "         'Magic arrow': 10, \n",
+    "         'Black Tentacles': 25, \n",
+    "         'Contagion': 45}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Fireball', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
+    "\n",
+    "gandalf_power = [POWER[spell] for spell in gandalf]\n",
+    "print(gandalf_power)\n",
+    "saruman_power = [POWER[spell] for spell in saruman]\n",
+    "print(saruman_power)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +251,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('gandalf: 1', 'saruman: 0')\n",
+      "('gandalf: 0', 'saruman: 1')\n",
+      "('gandalf: 1', 'saruman: 0')\n",
+      "('gandalf: 0', 'saruman: 1')\n",
+      "('gandalf: 1', 'saruman: 0')\n",
+      "('gandalf: 0', 'saruman: 1')\n",
+      "('gandalf: 1', 'saruman: 0')\n",
+      "('gandalf: 2', 'saruman: 0')\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "bad operand type for unary +: 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-494c94fe1a05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mgandalf_wins\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mgandalf_wins\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gandalf: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgandalf_wins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'saruman: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msaruman_wins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gandalf wins'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: bad operand type for unary +: 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf = [50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+    "saruman = [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n",
+    "spells = 10\n",
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
+    "\n",
+    "for i in range(spells):\n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        gandalf_wins += 1\n",
+    "        if gandalf_wins == 3:\n",
+    "            print(('gandalf: ', + str(gandalf_wins), 'saruman: ', + str(saruman_wins)))\n",
+    "            print('gandalf wins')\n",
+    "            break\n",
+    "        else: \n",
+    "            saruman_wins = 0 \n",
+    "            print(('gandalf: ' + str(gandalf_wins), 'saruman: ' + str(saruman_wins)))\n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        saruman_wins += 1\n",
+    "        if saruman_wins == 3:\n",
+    "            print((' gandalf: ' + str(gandal_wins), 'saruman: ' + str(saruman_wins)))\n",
+    "            print('saruman wins')\n",
+    "            break\n",
+    "        else:\n",
+    "            gandalf_wins = 0\n",
+    "            print(('gandalf: ' + str(gandalf_wins), 'saruman: ' + str(saruman_wins)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,16 +317,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average spell power of gandalf is 39.0\n",
+      "average spell power of saruman is 30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf = [50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+    "saruman = [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n",
+    "\n",
+    "average_gandalf = sum(gandalf)/len(gandalf)\n",
+    "average_saruman = sum(saruman)/len(saruman)\n",
+    "print('average spell power of gandalf is ' + str(average_gandalf))\n",
+    "print('average spell power of saruman is ' + str(average_saruman))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.1\n",
+      "17.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "gandalf = [50, 40, 40, 10, 50, 10, 40, 50, 50, 50]\n",
+    "saruman = [45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n",
+    "\n",
+    "gandalf_ = [int((spell - average_gandalf)**2) for spell in gandalf]\n",
+    "variance_gandalf = sum(gandalf_)/len(gandalf_)\n",
+    "standard_deviation_gandalf = round(variance_gandalf**(1/2), 1)\n",
+    "print(standard_deviation_gandalf)\n",
+    "\n",
+    "saruman_ = [int((spell - average_saruman)**2) for spell in gandalf]\n",
+    "variance_saruman = sum(saruman_)/len(saruman_)\n",
+    "standard_deviation_saruman = round(variance_saruman**(1/2), 1)\n",
+    "print(standard_deviation_saruman)"
    ]
   },
   {
@@ -221,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
