--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(stops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +80,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stop  1 \n",
+      "\n",
+      "10 people in \n",
+      "0 people out \n",
+      "there are 10passengers at stop 0\n",
+      "\n",
+      "stop  2 \n",
+      "\n",
+      "4 people in \n",
+      "1 people out \n",
+      "there are 13passengers at stop 1\n",
+      "\n",
+      "stop  3 \n",
+      "\n",
+      "3 people in \n",
+      "5 people out \n",
+      "there are 11passengers at stop 2\n",
+      "\n",
+      "stop  4 \n",
+      "\n",
+      "3 people in \n",
+      "4 people out \n",
+      "there are 10passengers at stop 3\n",
+      "\n",
+      "stop  5 \n",
+      "\n",
+      "5 people in \n",
+      "1 people out \n",
+      "there are 14passengers at stop 4\n",
+      "\n",
+      "stop  6 \n",
+      "\n",
+      "1 people in \n",
+      "5 people out \n",
+      "there are 10passengers at stop 5\n",
+      "\n",
+      "stop  7 \n",
+      "\n",
+      "5 people in \n",
+      "8 people out \n",
+      "there are 7passengers at stop 6\n",
+      "\n",
+      "stop  8 \n",
+      "\n",
+      "4 people in \n",
+      "6 people out \n",
+      "there are 5passengers at stop 7\n",
+      "\n",
+      "stop  9 \n",
+      "\n",
+      "2 people in \n",
+      "3 people out \n",
+      "there are 4passengers at stop 8\n",
+      "\n",
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n",
+    "passengers = []\n",
+    "total_pass = 0\n",
+    "for i in range(9):\n",
+    "    total_pass += (stops[i][0] -  stops[i][1])\n",
+    "    passengers.append(total_pass)\n",
+    "    \n",
+    "    print('stop ', i + 1, '\\n')\n",
+    "    print(stops[i][0], 'people in ')\n",
+    "    print(stops[i][1], 'people out ')\n",
+    "    print('there are ' + str(total_pass) + 'passengers at stop ' + str(i) + '\\n')\n",
+    "print(passengers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,16 +171,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(passengers)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.333333333333334 people\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_occupation = sum(passengers)/len(passengers)\n",
+    "print(avg_occupation, 'people')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Standard deviation is 3.0people \n"
+     ]
+    }
+   ],
+   "source": [
+    "diff = [ (occupation - avg_occupation)**2 for occupation in passengers]\n",
+    "variance = sum(diff)/len(diff)\n",
+    "print(' Standard deviation is ' + str(round(variance**(1/2), 0)) +'people ')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -117,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
