--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At (4, 5)at least an arrow that hits another one \n",
+      "At (4, 5)at least an arrow that hits another one \n",
+      "At (5, 7)at least an arrow that hits another one \n",
+      "At (2, 2)at least an arrow that hits another one \n",
+      "At (-3, 2)at least an arrow that hits another one \n",
+      "At (-3, 2)at least an arrow that hits another one \n",
+      "At (5, 7)at least an arrow that hits another one \n",
+      "At (5, 7)at least an arrow that hits another one \n",
+      "At (2, 2)at least an arrow that hits another one \n"
+     ]
+    }
+   ],
+   "source": [
+    "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5), (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
+    "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2), (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "\n",
+    "counts = {}\n",
+    "for couple in points:\n",
+    "    if couple not in counts:\n",
+    "        counts[couple] = 1\n",
+    "    else:\n",
+    "        counts[couple] += 1\n",
+    "        \n",
+    "for couple in points:\n",
+    "    if counts[couple] >= 2:\n",
+    "        print('At ' +str(couple) + 'at least an arrow that hits another one ')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +102,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Q1': 10, 'Q2': 2, 'Q3': 2, 'Q4': 6, 'No Quadrant': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q1 = x and y positive\n",
+    "#Q2 = x positive and y negative \n",
+    "#Q3 = x and y negative \n",
+    "#Q4 x negative and y positive \n",
+    "\n",
+    "quadrant = {'Q1':0, 'Q2':0, 'Q3':0, 'Q4':0, 'No Quadrant':0}\n",
+    "\n",
+    "for (x,y) in points:\n",
+    "    if x > 0 and y > 0:\n",
+    "        quadrant['Q1'] += 1\n",
+    "    elif x > 0 and y < 0:\n",
+    "        quadrant['Q2'] += 1\n",
+    "    elif x < 0 and y < 0:\n",
+    "        quadrant['Q3'] += 1\n",
+    "    elif x < 0 and y > 0:\n",
+    "        quadrant['Q4'] += 1\n",
+    "    else:\n",
+    "        quadrant['No Quadrant'] += 1\n",
+    "print(quadrant)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +148,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list of points closest to center: \n",
+      "[(0, 2), (0, -2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def distance_to_center(x,y):\n",
+    "    distance = round(((0-x)**2)**(1/2),1)\n",
+    "    return distance \n",
+    "distances = [distance_to_center(x,y) for (x,y) in points]\n",
+    "#print(distances)\n",
+    "min(distances)\n",
+    "\n",
+    "min_distances_indices = []\n",
+    "points_closest_to_center = []\n",
+    "for i in range(len(distances)):\n",
+    "    if distances [i] == min(distances):\n",
+    "        min_distances_indices.append(i)\n",
+    "        points_closest_to_center.append(points[i])\n",
+    "print('list of points closest to center: ')\n",
+    "print(points_closest_to_center)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,6 +184,27 @@
    "source": [
     "#### 4. If the archery target has a radius of 9, calculate the number of arrows that won't hit the target. \n",
     "**Hint**: Use the function created in step 3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 arrows not hit the target\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0 \n",
+    "for distance in distances:\n",
+    "    if distance > 9:\n",
+    "        count += 1\n",
+    "print(count, 'arrows not hit the target')"
    ]
   },
   {
@@ -125,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
