--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_C = [33, 66, 65, 0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "\n",
+    "min_temp = min(temperatures_C)\n",
+    "print(min_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_temp = max(temperatures_C)\n",
+    "print(max_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "greater_70 = [temp for temp in temperatures_C if temp >= 70]\n",
+    "print(greater_70)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_temp = sum(temperatures_C)/len(temperatures_C)\n",
+    "print(average_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 66, 65, 62, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_C[3] = int((65+59)/2)\n",
+    "print(temperatures_C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91, 150, 149, 143, 138, 140, 143, 147, 158, 168, 176, 177, 176, 181, 194, 174, 141, 127, 122, 120, 127, 118, 113, 102]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_F = [int(1.8 * temp + 32) for temp in temperatures_C]\n",
+    "print(temperatures_F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cooling system needs to be changed \n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(greater_70) > 4 or max_temp > 80 or average_temperatures > 65:\n",
+    "    print('cooling system needs to be changed ')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 10, 11, 12, 13, 14, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sup_70_hours = [i for i in range(len(temperatures_C)) if temperatures_C[i] > 70]\n",
+    "print(sup_70_hours)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,10 +279,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list has more than 4 consecutive hours \n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 1\n",
+    "max_count = count \n",
+    "for i in range(len(sup_70_hours)-1):\n",
+    "    if sup_70_hours[i] + 1 == sup_70_hours[i + 1]:\n",
+    "        count += 1\n",
+    "        if count > max_count:\n",
+    "            max_count = count\n",
+    "    else:\n",
+    "        count = 1\n",
+    "if max_count > 4:\n",
+    "    print('list has more than 4 consecutive hours ')\n",
+    "else:\n",
+    "    print('list has less than 4 consecutive hours')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +316,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cooler needs to be changed \n"
+     ]
+    }
+   ],
+   "source": [
+    "if max_count > 4 or max_temp > 80 or max_averages_temperatures:\n",
+    "    print('cooler needs to be changed ')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,16 +341,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63.0\n",
+      "145.0\n",
+      "145.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_C = round(sum(temperatures_C)/len(temperatures_C), 0)\n",
+    "print(average_C)\n",
+    "average_F = round(sum(temperatures_F)/len(temperatures_F),0)\n",
+    "print(average_F)\n",
+    "\n",
+    "#the relation is : average_F = 1.8 * average_C + 32\n",
+    "print(1.8 * average_C + 32)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 5. Find the standard deviation of the temperature lists (ºC and ºF). What is the relation between both standard deviations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1421.242003788705\n",
+      "3306.313209855755\n",
+      "2558.235606819669\n"
+     ]
+    }
+   ],
+   "source": [
+    "def st_deviation(liste):\n",
+    "    average = sum(liste)-len(liste)\n",
+    "    ecarts_carres = [(elem - average)**2 for elem in liste]\n",
+    "    variance = sum(ecarts_carres)/len(ecarts_carres)\n",
+    "    return variance**(1/2)\n",
+    "\n",
+    "print(st_deviation(temperatures_C))\n",
+    "print(st_deviation(temperatures_F))\n",
+    "\n",
+    "#relation is : st_deviation(temperatures_F) = 1.8 * st_deviation(temperatures_C)\n",
+    "print(1.8 * st_deviation(temperatures_C))"
    ]
   },
   {
@@ -254,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
