--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -32,10 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import choice"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,14 +47,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "gestures = ['rock','paper', 'scissors']"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "#### 3. Create a variable called `n_rounds` to store the maximum number of rounds to play in a game. \n",
@@ -61,10 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_rounds = 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,11 +79,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "rounds_to_win = (n_rounds/2) + 1\n",
+    "print(rounds_to_win)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cpu_score = 0\n",
+    "player_score = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def computer_plays():\n",
+    "    return choice(gestures)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def players_plays():\n",
+    "    player = input('which gesture do you want: rock, paper, scissors? /n')\n",
+    "    \"\"\"while player not in gestures:\n",
+    "        player= input('which gesture do you want: rock, paper, scissors? \\n')\"\"\"\n",
+    "    return player"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def whwho_won():\n",
+    "    if computer_plays == player_plays():\n",
+    "        return 0\n",
+    "    if (computer_plays() == 'rock' and player_plays() == 'scissors') or (computer_plays() == 'paper' and player_plays() == 'rock') or (computer_plays() == 'scissors'and player_plays == 'paper'):\n",
+    "        return 1\n",
+    "    if (computer_plays() == 'rock' and player_plays() == 'paper') or (computer_plays() == 'paper' and player_plays() == 'scissors') or (computer_plays() == 'scissors'and player_plays == 'rock'):\n",
+    "        return 2\n",
+    "    \n",
+    "    def who_won(computer_gesture, player_gesture):\n",
+    "        if computer_gesture == player_gesture:\n",
+    "            return 0\n",
+    "        if (computer_gesture == 'rock' and player_gesture == 'scissors') or (computer_gesture == 'paper' and player_gesture == 'rock') or (computer_gesture =='scissors' and player_gesture == 'paper'):\n",
+    "            return 1\n",
+    "        if (computer_gesture == 'rock' and player_gesture == 'paper') or (computer_gesture == 'paper' and player_gesture == 'scissors') or (computer_gesture == 'scissors' and player_gesture == 'rock'):\n",
+    "            return 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +183,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def one_round(cpu_score, player_score, number_round):\n",
+    "    number_round += 1\n",
+    "    print('round' + str(number_round) + '\\n')\n",
+    "    computer_gesture = computer_plays()\n",
+    "    print('computer_plays' + str(computer_gesture) + '\\n')\n",
+    "    computer_gesture + player_plays()\n",
+    "    result = who_won(compzter_gesture, player_gesture)\n",
+    "    if result == 0:\n",
+    "        print('the result of the round ' + str(number_round) + 'is tie. \\n')\n",
+    "    if result == 1:\n",
+    "        print('the computer won the round' + str(number_round)+ '\\n')\n",
+    "        cpu_score += 1\n",
+    "    if result == 2:\n",
+    "        print('the player won the round' + str(number_round)+ '\\n' )\n",
+    "        player_score += 1\n",
+    "    return cpu_score, player_score, number_round"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +218,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "round1\n",
+      "\n",
+      "computer_playsscissors\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'player_plays' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-027ac8b5114a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mrounds_to_win\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn_rounds\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnumber_rounds\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mn_rounds\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcpu_score\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mrounds_to_win\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mplayer_score\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mrounds_to_win\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m      \u001b[0mcpu_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplayer_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mone_round\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcpu_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplayer_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_rounds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m      \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'computer score is '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcpu_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m      \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'player score is '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayer_Score\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-30-37fe389297b4>\u001b[0m in \u001b[0;36mone_round\u001b[0;34m(cpu_score, player_score, number_round)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mcomputer_gesture\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomputer_plays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'computer_plays'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomputer_gesture\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mcomputer_gesture\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mplayer_plays\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwho_won\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompzter_gesture\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplayer_gesture\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'player_plays' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "n_rounds = 3\n",
+    "number_rounds = 0\n",
+    "cpu_score = 0\n",
+    "player_score = 0\n",
+    "\n",
+    "rounds_to_win = (n_rounds/2) + 1\n",
+    "while (number_rounds < n_rounds) and (cpu_score < rounds_to_win) or (player_score < rounds_to_win):\n",
+    "     cpu_score, player_score, number_score = one_round(cpu_score, player_score, number_rounds)\n",
+    "     print('computer score is ' + str(cpu_score))\n",
+    "     print('player score is ' + str(player_Score) + '\\n')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +267,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computer wins\n",
+      "player_wins\n",
+      "the game is tied\n"
+     ]
+    }
+   ],
+   "source": [
+    "if cpu_score >= player_score:\n",
+    "    print('computer wins')\n",
+    "if player_score >= cpu_score:\n",
+    "    print('player_wins')\n",
+    "if player_score == cpu_score:\n",
+    "    print('the game is tied')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
